font changed to camel case

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 				<section>
                     <section>
 				  <h2>PROJECTS</h2>
-                        CREATEED WEATHER APPLICATION USING MERN STACKAND DEPLOYED IN IN VERCEL
-					    CREATED  BASIC PAYTM APPLICATION INTIGRATED TRANSACTIONS 
-					    CREATED UI/UX DESIGNS USING FIGMA    
+				       Created weather application using MERN stack and deployed in Vercel
+					   Created basic Paytm application integrated with transactions
+                       Created UI/UX designs using Figma
 					</section>
                     <h2>CERTIFICATIONS</h2>
                     <ul>
