changed the projects section

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
 					<p>I’m an enthusiastic web development learner and an undergraduate student at RGUKT-Basar, passionate about creating modern, responsive web applications using the latest technologies.</p>
 				</section>
 				<section>
-                    <section>
+                    <p>
 				  <h2>PROJECTS</h2>
-				       Created weather application using MERN stack and deployed in Vercel
-					   Created basic Paytm application integrated with transactions
-                       Created UI/UX designs using Figma
+				       <p>Created weather application using MERN stack and deployed in Vercel</p>
+					   <p>Created basic Paytm application integrated with transactions</p>
+                       <p>Created UI/UX designs using Figma</p> 
 					</section>
                     <h2>CERTIFICATIONS</h2>
                     <ul>
